--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html, body {
 
 body {
   font-family: sans-serif;
-  background-color: #f0f0f0; 
+  /* background-color: #f0f0f0;  */
   color: rgba(0, 0, 0, 0.75);
 }
 
