donor bug fixed

--- a/src/components/ReportingHub/Summary/ReportsSummary.css
+++ b/src/components/ReportingHub/Summary/ReportsSummary.css
@@ -152,3 +152,6 @@
 .housing-summary .summary-charts-row {
   margin-top: 1.5rem;
 }
+
+
+/* todo - figure out the style issue with housing on smaller screens */
